force-app/main/default/objects/PMC_Shipment_Data__c/PMC_Shipment_Data__c.object-meta.xml
<CustomObject>
    <label>Shipment Data</label>
    <nameField>
        <label>Shipment Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Shipment Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>