force-app/main/default/objects/PMC_Shipment_Data__c/fields/Intransit_Status__c.field-meta.xml
<CustomField>
    <fullName>Intransit_Status__c</fullName>
    <label>Intransit Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Intransit_Status</valueSetName>
    </valueSet>
</CustomField>