force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_BOL__c.field-meta.xml
<CustomField>
    <fullName>PMC_BOL__c</fullName>
    <label>BOL</label>
    <length>30</length>
    <type>Text</type>
</CustomField>