force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_BOLNUMBER__c.field-meta.xml
<CustomField>
    <fullName>PMC_BOLNUMBER__c</fullName>
    <label>BOLNUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>