force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_COMMENTS__c.field-meta.xml
<CustomField>
    <fullName>PMC_COMMENTS__c</fullName>
    <label>COMMENTS</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>