force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CPQ_CurrentCoordinates__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_CurrentCoordinates__c</fullName>
    <label>CurrentCoordinates</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>