force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CPQ_SAPDeliveryID__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SAPDeliveryID__c</fullName>
    <label>Delivery Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>