force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CPQ_Shipment_PO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Shipment_PO__c</fullName>
    <externalId>true</externalId>
    <label>Shipment PO</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>