force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CPQ_ShipmentNumber__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipmentNumber__c</fullName>
    <label>Shipment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>