force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CURRENTCARRIER__c.field-meta.xml
<CustomField>
    <fullName>PMC_CURRENTCARRIER__c</fullName>
    <label>CURRENTCARRIER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>