force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CURRENTLOCATION__c.field-meta.xml
<CustomField>
    <fullName>PMC_CURRENTLOCATION__c</fullName>
    <label>CURRENTLOCATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>