force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_CUSTORDERNO__c.field-meta.xml
<CustomField>
    <fullName>PMC_CUSTORDERNO__c</fullName>
    <label>CUSTORDERNO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>