force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_Deliveries_Updated__c.field-meta.xml
<CustomField>
    <fullName>PMC_Deliveries_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliveries Updated</label>
    <type>Checkbox</type>
</CustomField>