force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_DELIVERYNUMBER__c.field-meta.xml
<CustomField>
    <fullName>PMC_DELIVERYNUMBER__c</fullName>
    <label>DELIVERYNUMBER</label>
    <length>252</length>
    <type>Text</type>
</CustomField>