force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_DESTINATIONCARRIER__c.field-meta.xml
<CustomField>
    <fullName>PMC_DESTINATIONCARRIER__c</fullName>
    <label>DESTINATIONCARRIER</label>
    <length>255</length>
    <type>Text</type>
</CustomField>