force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_DESTINATIONMM__c.field-meta.xml
<CustomField>
    <fullName>PMC_DESTINATIONMM__c</fullName>
    <label>DESTINATIONMM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>