force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_EQUIPMENTID__c.field-meta.xml
<CustomField>
    <fullName>PMC_EQUIPMENTID__c</fullName>
    <label>EQUIPMENTID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>