force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_ETA__c.field-meta.xml
<CustomField>
    <fullName>PMC_ETA__c</fullName>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>