force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_FLEETTOWNAME__c.field-meta.xml
<CustomField>
    <fullName>PMC_FLEETTOWNAME__c</fullName>
    <label>FLEETTOWNAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>