force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_LATESTINTERNALCOMMENT__c.field-meta.xml
<CustomField>
    <fullName>PMC_LATESTINTERNALCOMMENT__c</fullName>
    <label>LATESTINTERNALCOMMENT</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>