force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_LATESTTRIPSIGHTINGID__c.field-meta.xml
<CustomField>
    <fullName>PMC_LATESTTRIPSIGHTINGID__c</fullName>
    <label>LATESTTRIPSIGHTINGID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>