force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_PONUMBER__c.field-meta.xml
<CustomField>
    <fullName>PMC_PONUMBER__c</fullName>
    <label>PONUMBER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>