force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_SHIPMENTNUMBER_CNTORDER__c.field-meta.xml
<CustomField>
    <fullName>PMC_SHIPMENTNUMBER_CNTORDER__c</fullName>
    <label>SHIPMENTNUMBER_CNTORDER</label>
    <length>30</length>
    <type>Text</type>
</CustomField>