force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_SIGHTINGDESTINATION__c.field-meta.xml
<CustomField>
    <fullName>PMC_SIGHTINGDESTINATION__c</fullName>
    <label>SIGHTINGDESTINATION</label>
    <length>255</length>
    <type>Text</type>
</CustomField>