force-app/main/default/objects/PMC_Shipment_Data__c/fields/PMC_SIGHTINGLOADOREMPTY__c.field-meta.xml
<CustomField>
    <fullName>PMC_SIGHTINGLOADOREMPTY__c</fullName>
    <label>SIGHTINGLOADOREMPTY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>