force-app/main/default/objects/PMC_Shipment_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PMC_CPQ_SAPDeliveryID__c</columns>
    <columns>PMC_CPQ_Shipment_PO__c</columns>
    <columns>PMC_CPQ_ShipmentNumber__c</columns>
    <columns>PMC_ETA__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>