force-app/main/default/objects/PMC_Shipment_Data__c/listViews/Intellitrans_Shipment_Data_View.listView-meta.xml
<ListView>
    <fullName>Intellitrans_Shipment_Data_View</fullName>
    <columns>PMC_EQUIPMENTID__c</columns>
    <columns>NAME</columns>
    <columns>PMC_CURRENTCARRIER__c</columns>
    <columns>PMC_CPQ_CurrentCoordinates__Latitude__s</columns>
    <columns>PMC_CPQ_CurrentCoordinates__Longitude__s</columns>
    <columns>PMC_CUSTORDERNO__c</columns>
    <columns>PMC_DELIVERYNUMBER__c</columns>
    <columns>PMC_ETA__c</columns>
    <columns>PMC_FLEETTOWNAME__c</columns>
    <columns>PMC_Deliveries_Updated__c</columns>
    <columns>PMC_PONUMBER__c</columns>
    <columns>PMC_CPQ_ShipmentNumber__c</columns>
    <columns>PMC_CPQ_Shipment_PO__c</columns>
    <columns>PMC_SHIPMENTNUMBER_CNTORDER__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Intellitrans Shipment Data View</label>
</ListView>